--- a/eth_meddata_warehouse/dbt_project.yml
+++ b/eth_meddata_warehouse/dbt_project.yml
@@ -1,7 +1,3 @@
-
-# Name your project! Project names should contain only lowercase characters
-# and underscores. A good package name should reflect your organization's
-# name or the intended use of these models
 name: 'eth_meddata_warehouse'
 version: '1.0.0'
 
@@ -18,6 +14,7 @@ seed-paths: ["seeds"]
 macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
 
+target-path: "target"
 clean-targets:         # directories to be removed by `dbt clean`
   - "target"
   - "dbt_packages"
@@ -31,6 +28,13 @@ clean-targets:         # directories to be removed by `dbt clean`
 # files using the `{{ config(...) }}` macro.
 models:
   eth_meddata_warehouse:
-    # Config indicated by + and applies to all files under models/example/
-    example:
-      +materialized: view
+    +materialized: table
+    +schema: transformed
+    transformed-telegram-messages:
+      +tags:["analysis"]
+    business_type_classification:
+      +tags: ["analysis"]
+    location_mention_analysis:
+      +tags: ["analysis"]
+    product_price_extraction:
+      +tags: ["analysis", "product_data"]
